k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datacompass
  labels:
    name: datacompass
    environment: production
    app: whatsapp-analytics
