k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datacompass-api-service
  labels:
    app: datacompass-api
    component: backend
    tier: application
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: datacompass-api
    component: backend
